initial html/css structure

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -14,5 +14,6 @@
     // Modules
     @import "modules/footer.scss";
     @import "modules/header.scss";
+    @import "modules/taskadd.scss";
 
 // Vendor/third-party 
