basic html head/aside/main structure; working task button; basic css; assets folder initated first w/ logo

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -15,5 +15,6 @@
     @import "modules/footer.scss";
     @import "modules/header.scss";
     @import "modules/taskadd.scss";
+    @import "modules/dashboard.scss";
 
 // Vendor/third-party 
