--- a/public/scss/base/typography.scss
+++ b/public/scss/base/typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Proza+Libre&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Proza+Libre:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {font-size: 100%;} /*16px*/
 
@@ -6,14 +6,12 @@ body {
   background: white;
   font-family: 'Proza Libre', sans-serif;
   font-weight: 400;
-  line-height: 1.75;
-  color: #000000;
+  color: #505050;
 }
 
 p {margin-bottom: 1rem;}
 
 h1, h2, h3, h4, h5 {
-  margin: 3rem 0 1.38rem;
   font-family: 'Work Sans', sans-serif;
   font-weight: 400;
   line-height: 1.3;
@@ -26,7 +24,7 @@ h1 {
 
 h2 {font-size: 2.441rem;}
 
-h3 {font-size: 1.953rem;}
+h3 {font-size: 1.65rem;}
 
 h4 {font-size: 1.563rem;}
 
