--- a/public/scss/layout/grid.scss
+++ b/public/scss/layout/grid.scss
@@ -1,15 +1,15 @@
 // Grid CSS, stores all our main site grid layouting
 
 // Import the layouts for our two main sections
-@import "layout/kanban.scss";
-@import "layout/activetask.scss";
+@import "kanban.scss";
+@import "activetask.scss";
 
 
 // main grid
 #container {  
     display: grid;
-    grid-template-columns: 175px 1fr;
-    grid-template-rows: 50px 1fr 50px;
+    grid-template-columns: 275px 1fr;
+    grid-template-rows: 60px 1fr 50px;
     gap: 0px 0px;
     grid-auto-flow: row;
     grid-template-areas:
@@ -56,7 +56,7 @@ html, body , #container {
     margin: 0;
 }
   
-  /* For presentation only, no need to copy the code below */
+  /* For presentation only, no need to copy the code below 
   
   #container * {
     border: 1px solid red;
@@ -74,5 +74,5 @@ html, body , #container {
     align-items: center;
     justify-content: center;
   }
-  
+  */
   
