--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -4,5 +4,8 @@
 }
 
     #kanban-head {
-        display: block;
+        margin: 25px 0px 25px 0px;
+        padding-right: 10%;
+        display: flex;
+        flex-direction: row-reverse;
     }
