--- a/public/scss/modules/dashboard.scss
+++ b/public/scss/modules/dashboard.scss
@@ -7,7 +7,7 @@
     width: 275px;
     padding: 75px 0px 0px 0px;
 
-    background: #ffffff80;
+    background-color: #b9b9b960;
     box-shadow: 1px 0px 3px rgba(0, 0, 0, 0.2);
 }
     #dash-title {
@@ -17,12 +17,12 @@
     #dash-title + p {
         font-size: 0.75rem;
         opacity: 75%;
-        margin-left: 25px;
+        margin: 0px 0px 25px 25px;
     }
 
 // Holds the active task list
 #activetasks-container {
-    background: lightgrey;
+    background-color: #ffffff;
     margin: 0px 15px 0px 15px;
 }
     #activetasks-title {
@@ -31,10 +31,12 @@
     }
     #activetasks-title + p {
         font-size: 0.65rem;
+        font-weight: 600;
         opacity: 75%;
         margin-left: 10px;
     }
 // Active task list
 #activetasks {
+    display: flex;
 
 }
