--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -1,11 +1,22 @@
+// Holds the two kanban sections - header and board
 #kanban-container { 
-    grid-area: kanban-container; 
     display: block;
+    width:100%;
+    height:100%;
 }
-
+    // Kanban header, holds addtask button
     #kanban-head {
         margin: 25px 0px 25px 0px;
         padding-right: 10%;
         display: flex;
         flex-direction: row-reverse;
+    }
+    // Kanban board
+    #kanban-board {
+        background-color: aquamarine;
+        display: flex;
+        flex-direction: column;
+        align-self: center;
+        width: 100%;
+        height: 100%;
     }
