--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -1,6 +1,8 @@
 #activetask-container { 
-    grid-area: activetask-container; 
+    background-color: cyan;
     display: flex;
     flex-direction: column;
     align-self: center;
+    width: 100%;
+    height: 100%;
 }
