--- a/public/scss/modules/header.scss
+++ b/public/scss/modules/header.scss
@@ -1,4 +1,5 @@
 // Header with logo and avatar button on either sides
+// elements are distributed horizontally
 header {
     display: flex;
     position: fixed;
