--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -1,8 +1,9 @@
+// The active task section's flex container
 #activetask-container { 
     background-color: cyan;
     display: flex;
-    flex-direction: column;
-    align-self: center;
+    flex-direction: row;
+    justify-content: center;
     width: 100%;
     height: 100%;
 }
