--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -7,16 +7,29 @@
     // Kanban header, holds addtask button
     #kanban-head {
         margin: 25px 0px 25px 0px;
-        padding-right: 10%;
+        padding-right: 5%;
         display: flex;
         flex-direction: row-reverse;
     }
     // Kanban board
     #kanban-board {
-        background-color: aquamarine;
-        display: flex;
-        flex-direction: column;
-        align-self: center;
+        display: table;
+        //align-self: center;
         width: 100%;
-        height: 100%;
+        height: 80%;
+        padding-right: 5%;
     }
+    #kanban-board > div {
+        //background-color: burlywood;
+        display: table-cell;
+        text-align: center;
+        //background-color: green;
+        border-right: solid 1px white; 
+        border-left: solid 1px white;
+    }
+    #kanban-board > div > h1 {
+        text-decoration: underline 3px;
+        color: white;
+        text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    }
+    
