--- a/public/scss/modules/header.scss
+++ b/public/scss/modules/header.scss
@@ -6,6 +6,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    height: 60px;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
