initial colour pass and style changes; reorganised script

--- a/public/scss/layout/grid.scss
+++ b/public/scss/layout/grid.scss
@@ -15,7 +15,7 @@
   grid-template-areas:
     "header header"
     "dashboard main"
-    "footer footer";
+    "nomansland footer"; // nomansland is space beneath dashboard
 }
   
 header { 
