--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -14,16 +14,14 @@
     // Kanban board
     #kanban-board {
         display: table;
-        //align-self: center;
         width: 100%;
         height: 80%;
         padding-right: 5%;
+        margin: 0 auto;
     }
     #kanban-board > div {
-        //background-color: burlywood;
         display: table-cell;
         text-align: center;
-        //background-color: green;
         border-right: solid 1px white; 
         border-left: solid 1px white;
     }
