--- a/public/scss/modules/header.scss
+++ b/public/scss/modules/header.scss
@@ -11,7 +11,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 25px 10px 25px;
-        
-    background: #929292;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+}
+
+#avatar-button {
+    border: none;
+    background-color: transparent;
 }
