added archive tasks list; beginnings of new add task system

--- a/public/scss/base/color.scss
+++ b/public/scss/base/color.scss
@@ -7,7 +7,7 @@ header {
     background-color: #fff2e6bf;
     box-shadow: 1px 0px 3px #00000033;
 }
-    #dashactivetasks-container {
+    #dashactivetasks-container, #dashdeldtasks-container {
         background-color: #FFF5EC;
         border: 1px solid #bebebe;
         border-radius: 10px;
