--- a/public/scss/modules/dashboard.scss
+++ b/public/scss/modules/dashboard.scss
@@ -7,11 +7,11 @@
     width: 275px;
     padding: 75px 0px 0px 0px;
 }
-    #dash-title {
+    .dash-h3 {
         font-weight: 600;
         margin-left: 25px;
     }
-    #dash-title + p {
+    .dash-h3 + p {
         font-size: 0.75rem;
         opacity: 75%;
         margin: 0px 0px 25px 25px;
@@ -19,14 +19,14 @@
 
 // Holds the active task list
 #dashactivetasks-container {
-    margin: 0px 15px 0px 15px;
+    margin: 0px 15px 15px 15px;
     padding: 5px 0px 5px 0px;
 }
-    #dashactivetasks-title {
+    .dash-h4 {
         font-weight: 400;
         margin-left: 10px;
     }
-    #dashactivetasks-title + p {
+    .dash-h4 + p {
         font-size: 0.65rem;
         font-weight: 600;
         opacity: 75%;
@@ -39,4 +39,10 @@
     border-radius: 5px;
     display: flex;
     height: 300px;
+}
+
+// Holds the deleted task list
+#dashdeldtasks-container {
+    margin: 0px 15px 0px 15px;
+    padding: 5px 0px 5px 0px;
 }
