--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -16,17 +16,21 @@
         display: table;
         width: 100%;
         height: 80%;
-        padding-right: 5%;
+        padding: 0 5% 0 5%;
         margin: 0 auto;
+        table-layout: fixed;
     }
     #kanban-board > div {
         display: table-cell;
+        width: 100%;
         text-align: center;
         border-right: solid 1px white; 
         border-left: solid 1px white;
     }
     #kanban-board > div > h1 {
         text-decoration: underline 3px;
+        font-size: 16px;
+        font-size: 4vh;
         color: white;
         text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     }
