--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -1,8 +1,95 @@
-// The active task section's flex container
-#activetask-container { 
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+// Active task section
+#activetask-container {  
+    display: grid;
+    grid-template-columns: 0.4fr 1fr 0.4fr;
+    grid-template-rows: 1fr;
+    gap: 0px 0px;   
+    grid-auto-flow: row;
+    grid-template-areas:
+      "activetask-left activetask-main activetask-right";
+    margin: 5% 10% 2.5% 10%;
 }
+    .activetaskmain-h1 {
+        text-align: center;
+        text-decoration: underline 3px;
+        font-size: 3rem;
+        font-size: 2.5vw;
+        font-weight: 600;
+    }
+    .activetaskmain-h2 {
+        text-align: center;
+        font-size: 1.85rem;
+        font-size: 1.65vw;
+        font-weight: 600;
+    }
+    .activetaskpanel-h2 {
+        text-align: center;
+        text-decoration: underline 2px;
+        font-size: 1.5rem;
+        font-size: 1.35vw;
+        font-weight: 500;
+    }
+    .activetaskpanel-h3 {
+        font-size: 1.35rem;
+        font-size: 1.15vw;
+        font-weight: 400;
+    }
+    .activetaskpanel-topbig {
+        margin-bottom: 5px;
+    }
+    .activetaskpanel-topsmall {
+        margin-bottom: 5px;
+    }
+  
+    #activetask-main { 
+        background-color: #ffffff;
+        border-radius: 40px;
+
+        grid-area: activetask-main; 
+        width:100%;
+        height:100%;
+    }
+  
+    #activetask-left { 
+        grid-area: activetask-left; 
+    }
+    #activetask-music {
+        background-color: #ffffff;
+        border-radius: 20px;
+
+        margin: 0px 20px 0px 20px;
+    }
+  
+    #activetask-right {  
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: max-content max-content max-content;
+        gap: 10px 0px;
+        grid-auto-flow: row;
+        grid-template-areas:
+            "activetask-stopwatch"
+            "activetask-main-pomedit"
+            "activetask-timer";
+        grid-area: activetask-right;
+    }
+    #activetask-stopwatch { 
+        background-color: #ffffff;
+        border-radius: 20px;
+
+        grid-area: activetask-stopwatch; 
+        margin: 0px 20px 10px 20px;
+    }
+    #activetask-main-pomedit { 
+        background-color: #ffffff;
+        border-radius: 0px 10px 10px 0px;
+
+        grid-area: activetask-main-pomedit; 
+        width: 150px;
+    }
+    #activetask-timer { 
+        background-color: #ffffff;
+        border-radius: 20px;
+        
+        grid-area: activetask-timer; 
+        margin: 10px 20px 0px 20px;
+    }
