--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -7,30 +7,96 @@
     // Kanban header, holds addtask button
     #kanban-head {
         margin: 25px 0px 25px 0px;
-        padding-right: 5%;
+        padding: 0% 5% 0% 5%;
         display: flex;
         flex-direction: row-reverse;
+        //align-items: flex-end;
+        flex-wrap: nowrap;
     }
-    // Kanban board
-    #kanban-board {
-        display: table;
-        width: 100%;
-        height: 80%;
-        padding: 0 5% 0 5%;
-        margin: 0 auto;
-        table-layout: fixed;
+    .instructions {
+        font-size: 16px;
+        font-size: 1vw;
+        font-weight: 300;
+        color: #ffffff99;
+        position: absolute;
+        margin: 2.5%;
     }
-    #kanban-board > div {
-        display: table-cell;
+    #taskadd-button {
+        align-self: flex-end;
+    }
+
+// Kanban board
+#kanban-board {
+    display: flex;
+    height: 80%;
+    padding: 0 5% 0 5%;
+    margin: 0 auto;
+}
+    // Columns
+    .kanban-column {
         width: 100%;
         text-align: center;
         border-right: solid 1px white; 
         border-left: solid 1px white;
     }
-    #kanban-board > div > h1 {
+    /* // Old
+    .kanban-column_grid {
+        height: 80%;
+        text-align: center;
+        //border-right: solid 1px white; 
+        //border-left: solid 1px white;
+        display: grid; 
+        grid-template-columns: 1fr 1fr; 
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
+        gap: 0px 0px; 
+    }
+    */
+    // Column headings
+    .kanban-column > h1 {
         text-decoration: underline 3px;
         font-size: 16px;
         font-size: 4vh;
+        margin-bottom: 20px;
         color: white;
         text-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
     }
+
+// Individual notes
+.kanban-entry {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: absolute;
+    background-color: #ffffff;
+    width: 8vw;
+    text-align: left;
+}
+    .kanban-entry > button {
+        position: absolute;
+        align-self: flex-end;
+        border: none;
+        font-size: 12px;
+        font-size: 0.75vw;
+        background-color: transparent;
+        top: -2%;
+        right: -3%;
+        color: #707070;
+    }
+    .kanban-entry-title {
+        font-size: 16px;
+        font-size: 0.85vw;
+        font-weight: 500;
+    }
+    .kanban-entry-duedate, .kanban-entry-priority {
+        margin: 3%;
+        font-size: 14px;
+        font-size: 0.75vw;
+    }
+    .kanban-entry-priority {
+        border-top: solid 1px #70707040;
+    }
+.kanban-entryheader {
+    cursor: move;
+    padding: 3%;
+    background-color: lightcyan;
+}
