--- a/public/scss/modules/header.scss
+++ b/public/scss/modules/header.scss
@@ -11,6 +11,8 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 25px 10px 25px;
+    
+    z-index: 1000;
 }
 
 #avatar-button {
