--- a/public/scss/layout/kanban.scss
+++ b/public/scss/layout/kanban.scss
@@ -27,8 +27,10 @@
 
 // Kanban board
 #kanban-board {
+    min-width: 1000px;
     display: flex;
-    height: 80%;
+    width: 100%;
+    min-height: 800px;
     padding: 0 5% 0 5%;
     margin: 0 auto;
 }
@@ -39,18 +41,6 @@
         border-right: solid 1px white; 
         border-left: solid 1px white;
     }
-    /* // Old
-    .kanban-column_grid {
-        height: 80%;
-        text-align: center;
-        //border-right: solid 1px white; 
-        //border-left: solid 1px white;
-        display: grid; 
-        grid-template-columns: 1fr 1fr; 
-        grid-template-rows: 1fr 1fr 1fr 1fr 1fr; 
-        gap: 0px 0px; 
-    }
-    */
     // Column headings
     .kanban-column > h1 {
         text-decoration: underline 3px;
@@ -64,25 +54,12 @@
 // Individual notes
 .kanban-entry {
     display: flex;
+    width: 150px;
+    height: 150px;
     flex-direction: column;
     position: absolute;
-    background-color: #ffffff;
-    width: 8vw;
     text-align: left;
-    aspect-ratio: 1 / 1;
 }
-    .kanban-entry > button {
-        position: absolute;
-        align-self: flex-end;
-        border: none;
-        font-size: 12px;
-        font-size: 0.75vw;
-        background-color: transparent;
-        top: -2%;
-        right: -3%;
-        color: #707070;
-    }
-
     .kanban-entry-textcontainer {
         height: 88%;
         display: flex;
@@ -105,7 +82,23 @@
             border-top: solid 1px #70707040;
         }
 .kanban-entryheader {
-    cursor: move;
-    height: 12%;
-    background-color: lightcyan;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: min-content;
 }
+    .kanban-entryheader > button {
+        //position: absolute;
+        border: none;
+        font-size: 12px;
+        font-size: 0.75vw;
+        background-color: transparent;
+        //top: -2%;
+        //right: -3%;
+        color: #707070;
+    }
+    .kanban-entryheader > button:hover {
+        font-weight:600;
+        background-color: #70707040;
+    }
