--- a/public/scss/modules/taskadd.scss
+++ b/public/scss/modules/taskadd.scss
@@ -5,7 +5,7 @@
 
     display: none;
     flex-direction: column;
-    position: fixed;
+    position: absolute;
     z-index: 999;
 }
     // Labels have a bit of space, and are sized up + bolder
