--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -2,7 +2,7 @@
 // Container
 #activetask-container {  
     display: grid;
-    grid-template-columns: 250px min-content 250px;
+    grid-template-columns: 250px min-content 350px;
     grid-template-rows: min-content;
     gap: 0px 0px;   
     grid-auto-flow: row;
@@ -16,7 +16,7 @@
     .activetaskmain-h1 {
         text-align: center;
         text-decoration: underline 3px;
-        font-size: 3rem;
+        font-size: 3.5rem;
         font-weight: 600;
     }
     .activetaskmain-h2 {
@@ -67,6 +67,7 @@
         right: 3%;
         top: 20px;
         float: right;
+        padding-left: 12px;
     }
 
     // Timer
@@ -80,8 +81,8 @@
         padding: 0px 15px 15px 15px;
     }
         #maintimer .values {
-            font-size: 6rem;
-            width: 425px;
+            font-size: 7rem;
+            width: 500px;
             text-align:center;
         }
         #timerbuttons-container {
@@ -90,6 +91,7 @@
             flex-direction: row;
             justify-content: center;
         }
+
     // Checklist
     #activetaskmain-checklist-container {
         margin: 25px 2.5% 2.5% 2.5%;
@@ -98,12 +100,36 @@
         #activetaskmain-checklist-container > h2 {
             margin: 5px 0px 15px 0px;
         }
-
         #activetaskmain-checklist {
             overflow-y: scroll;
             height: 200px;
             margin: 25px;
+            text-align: center;
         }
+
+#activetaskmain-entrypoint {
+    text-align: left;
+    list-style: none;
+    width: 100%;
+    max-width: 700px;
+    padding: 10px;
+    font-size: 1.1rem;
+}
+    .tasklist-item {
+        padding: 5px;
+
+    }
+    .tasklistitem-input{
+        margin: 5px;
+        width:20px;
+        height:20px;
+    }
+    .tastklistitem-content {
+        display:inline;
+        font-size: 1.1rem;
+        float:unset;
+        vertical-align: top;
+    }
 
 // Left side
 #activetask-left { 
@@ -120,11 +146,23 @@
         margin: 10px;
     }
     #activetasktimer-readout {
-        margin: 10px;
+        margin: 2px 10px 10px 10px;
     }
+        #activetasktimer-readout-days {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 1rem;
+        }
         #activetaskstopwatch-readout .values {
-            font-size: 2rem;
+            font-size: 2.25rem;
             text-align:center;
+        }
+        #activetasktimer-buttoncontainer {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 10px;
+            flex-direction: row;
+            justify-content: center;
         }
     #activetask-timer { 
         background-color: #ffffff;
@@ -133,7 +171,7 @@
         margin: 10px 20px 0px 20px;
     }
         #activetasktimer-readout .values {
-            font-size: 2rem;
+            font-size: 2.25rem;
             text-align:center;
         }
     #activetasktimer-due {
@@ -152,12 +190,23 @@
     display: block;
     grid-area: activetask-right;
 }
+
     #activetask-music {
         background-color: #ffffff;
         border-radius: 20px;
 
+        padding-bottom: 10px;
         margin: 0px 20px 0px 20px;
     }
+    #activetask-music > h2 {
+        padding-bottom: 15px;
+    }
+        #activetaskmusic-player{
+            width: 100%;
+            font-size: 0.5rem;
+            //margin: 0px 5px 0px 5px;
+        }
+
     #activetaskmain-pomedit { 
         background-color: #ffffff;
 
