--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -74,6 +74,13 @@
         float: right;
         padding-left: 12px;
     }
+    #activetaskmain-openallbutton {
+        position: relative;
+        right: 7.5%;
+        bottom: 45px;
+        float: right;
+        display:none;
+    }
 
     // Timer
     #activetaskmain-pomodoro {
@@ -89,6 +96,7 @@
             font-size: 7rem;
             width: 500px;
             text-align:center;
+            line-height: 9rem;
         }
         #timerbuttons-container {
             display: flex;
@@ -101,9 +109,10 @@
     #activetaskmain-checklist-container {
         margin: 25px 2.5% 2.5% 2.5%;
         border-radius: 20px;
+        padding-bottom: 10px;
     }
         #activetaskmain-checklist-container > h2 {
-            margin: 5px 0px 15px 0px;
+            margin: 5px 0px 5px 0px;
         }
         #activetaskmain-checklist {
             overflow-y: scroll;
@@ -135,17 +144,37 @@
         float:unset;
         vertical-align: top;
     }
+        .tastklistitem-content_underline {
+            display:inline;
+            font-size: 1.1rem;
+            float:unset;
+            vertical-align: top;
+            text-decoration: underline 1px;
+        }
+    .tasklistitem-delbutton {
+        float: right;
+    }
+    .tasklistitem-openbutton{
+        float: right;
+    }
 
 // Left side
 #activetask-left { 
     grid-area: activetask-left; 
     display: block;
 }
+    .readout-disclaimer {
+        text-align: center;
+        margin: 0;
+        font-size: 0.65rem;
+        font-style:italic;
+        opacity: .75;
+    }
     #activetask-stopwatch { 
         background-color: #ffffff;
         border-radius: 20px;
 
-        margin: 0px 20px 10px 20px;
+        margin: 0px 20px 20px 20px;
     }
     #activetaskstopwatch-readout {
         margin: 10px;
@@ -201,7 +230,7 @@
         border-radius: 20px;
 
         padding-bottom: 10px;
-        margin: 0px 20px 0px 20px;
+        margin: 0px 20px 20px 20px;
     }
     #activetask-music > h2 {
         padding-bottom: 15px;
