--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -176,9 +176,17 @@
 
         margin: 0px 20px 20px 20px;
     }
-    #activetaskstopwatch-readout {
-        margin: 10px;
-    }
+        #activetaskstopwatch-readout {
+            margin: 10px;
+        }
+        #activetaskstopwatch-buttoncontainer {
+            display: flex;
+            gap: 10px;
+            margin-bottom: 10px;
+            flex-direction: row;
+            justify-content: center;
+        }
+
     #activetasktimer-readout {
         margin: 2px 10px 10px 10px;
     }
