pomodoro edit panel initial functionality

--- a/public/scss/base/colour.scss
+++ b/public/scss/base/colour.scss
@@ -97,6 +97,12 @@ main {
     border-bottom: 1px solid #999999;
     border-left: none;
 }
+    .pomedititem-work {
+        border-bottom: 1px solid #999999;
+    }
+    .pomedititem-break {
+        border-bottom: 1px solid #999999;
+    }
 
 footer {    
     background-color: #ffffff;
