--- a/public/scss/layout/activetask.scss
+++ b/public/scss/layout/activetask.scss
@@ -285,7 +285,7 @@
             margin-bottom: 3px;
         }
     .pomedititem-break {
-        
+        padding: 2.5px 0px 2.5px 0px
     }
         .pomedititem-break > h4 {
             font-size: 0.9rem;
