--- a/public/scss/layout/grid.scss
+++ b/public/scss/layout/grid.scss
@@ -8,7 +8,7 @@
 // main grid
 #container {  
   display: grid;
-  grid-template-columns: 275px 1fr;
+  grid-template-columns: 275px auto;
   grid-template-rows: 60px auto 50px;
   gap: 0px 0px;
   grid-auto-flow: row;
