--- a/public/scss/modules/dashboard.scss
+++ b/public/scss/modules/dashboard.scss
@@ -49,7 +49,41 @@
 // Active task list
 #dashactivetasks {
     margin: 10px;
-    display: flex;
-    height: 300px;
+    height: 250px;
     overflow-y: scroll;
 }
+
+#dashdeldtasks {
+    margin: 10px;
+    height: 150px;
+    overflow-y: scroll;
+}
+    #dashdeldtasks-list {
+        list-style: none;
+        padding: 0;
+    }
+    .dashdeldtasks-item {
+        list-style: none;
+        padding: 0px 5px 5px 5px;
+    }
+    .dashdeldtasks-item > p {
+        padding-bottom:3px;
+        margin-bottom: 1px;
+    }
+#dashactivetasks {
+    margin: 10px;
+    height: 250px;
+    overflow-y: scroll;
+}
+    #dashactivetasks-list {
+        list-style: none;
+        padding: 0;
+    }
+    .dashactivetasks-item {
+        list-style: none;
+        padding: 0px 5px 5px 5px;
+    }
+    .dashactivetasks-item > p {
+        padding-bottom: 5px;
+        margin-bottom: 1px;
+    }
